<resources>
    <string name="app_name">Phrasalovphus</string>
    <string name="action_settings">Settings</string>
    <string name="btn_add">add wordingo</string>
    <string name="browse">browse wordingo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rozmiar">"Dimensions: "</string>
    <string name="name">"Name: "</string>
    <string name="namehint">name</string>
    <string name="snackbar_empty_name">Name cannot be empty</string>
    <string name="snackbar_empty_field">At least one field is empty</string>
    <string name="i_added_matrix">Added matrix successfully</string>
</resources>
